--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "description": "Ativar modo escuro no Telegram",
+  "description": "Ativar tema escuro no Telegram | Enable dark theme in Telegram",
   "manifest_version": 2,
-  "name": "Telegram Dark",
+  "name": "Telegram Dark (Tema Escuro)",
   "author": "Johnendz",
-  "version": "1.2",
+  "version": "1.3",
 
   "content_scripts": [
     {
@@ -14,11 +14,8 @@
   ],
   
   "icons": {
-    "32": "icons/32.png",
-    "48": "icons/48.png",
+	"32": "icons/32.png",
     "64": "icons/64.png",
-    "96": "icons/96.png",
-    "128": "icons/128.png",
-    "256": "icons/256.png"
+    "128": "icons/128.png"
   }
 }
